# MacroPad

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  check_workspace_errors.txt  test.nitsrec  test_loop.nitsrec  test_notepad.nitsrec  test_record.nitsrec  test_record2.nitsrec  test_record3.nitsrec  test_type.nitsrec
.github/workflows/: release.yml  rust-tests.yml
.nits_history/: 20260317_144437_test_record3.nitsrec
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  ipc_client.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  migration.rs  models.rs  player.rs  recorder.rs  storage.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: ipc.rs  main.rs  scanner.rs  scheduler.rs  state.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: client.rs  lib.rs
crates/launcher/: Cargo.toml
crates/launcher/src/: main.rs
crates/platform/: Cargo.toml
crates/platform/src/: hotkey.rs  lib.rs  screenshot.rs  window.rs
crates/script/: Cargo.toml
crates/script/src/: ast.rs  lexer.rs  lexer_repro.rs  lib.rs  parser.rs  runner.rs  variables.rs
docs/: ARCHITECTURE.md  SCRIPTING.md
gui/: index.html  package-lock.json  package.json
gui/public/: Logo_Dark.icns  Logo_Light.icns
gui/src/: App.tsx  index.css  main.tsx
gui/src-tauri/: Cargo.toml  installer.nsh  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: MPR_Icon.icns  MPS_Icon.icns
gui/src-tauri/src/: lib.rs
gui/src/components/: BaseCard.tsx  BlockEditor.tsx  CodeEditor.tsx  HelpPanel.tsx  HotkeyManager.tsx  HumanStep.tsx  LibraryBrowser.tsx  MacroCard.tsx  RecorderSection.tsx  RecordingIndicator.tsx  SchedulerPanel.tsx  ScriptCard.tsx  ScriptEditor.tsx  ScriptLogPanel.tsx  ScriptingSection.tsx  SettingsPanel.tsx  StepEditor.tsx  Tooltip.tsx  VariablePromptModal.tsx
gui/src/context/: ConfigContext.tsx  LogContext.tsx  RecordingContext.tsx
gui/src/hooks/: useDaemon.ts  useRecording.ts
gui/src/lib/: tauri.ts
gui/src/types/: config.ts  editor.ts  macro.ts  script.ts
scripts/: build-sidecar.ps1  build-sidecar.sh
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: core.rs  scripting.rs
