[package]
name    = "macropad-system-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
macropad-core = { path = "../crates/core" }
macropad-ipc  = { path = "../crates/ipc" }
script        = { path = "../crates/script" }
tokio         = { version = "1", features = ["full"] }
chrono        = "0.4"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
