[package]
name    = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio         = { version = "1", features = ["full"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
thiserror     = "1"
clap          = { version = "4", features = ["derive"] }
macropad-core = { path = "../core" }
macropad-ipc  = { path = "../ipc" }
platform      = { path = "../platform" }
script        = { path = "../script" }
