[package]
name = "macropad-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde       = { version = "1", features = ["derive"] }
toml        = "0.8"
rdev        = "0.5"
enigo       = "0.2"
tokio       = { version = "1", features = ["full"] }
thiserror   = "1"
chrono      = { version = "0.4", features = ["serde"] }
platform    = { path = "../platform" }
serde_json  = "1"

[target.x86_64-pc-windows-msvc.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }
