[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
macropad-core = { version = "0.1.0", path = "../core" }
platform = { version = "0.1.0", path = "../platform" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
