[package]
name    = "daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio          = { version = "1", features = ["full"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
thiserror      = "1"
chrono         = { version = "0.4", features = ["serde"] }
tracing        = "0.1"
tracing-subscriber = "0.3"
macropad-core  = { path = "../core" }
macropad-ipc   = { path = "../ipc" }
platform       = { path = "../platform" }
script         = { path = "../script" }
global-hotkey  = "0.6"
toml           = "0.8"
rdev           = "0.5"
