[package]
name    = "platform"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror      = "1"
tokio          = { version = "1", features = ["full"] }
screenshots    = "0.8"
image          = "0.25"
macropad-core  = { version = "0.1.0", path = "../core" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "handleapi"] }
