[package]
name    = "gui"
version = "0.1.0"
edition = "2021"

[lib]
name = "gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri         = { version = "2", features = [] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
tokio         = { version = "1", features = ["full"] }
macropad-core = { path = "../../crates/core" }
macropad-ipc  = { path = "../../crates/ipc" }
platform      = { path = "../../crates/platform" }
script        = { path = "../../crates/script" }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default          = ["custom-protocol"]
custom-protocol  = ["tauri/custom-protocol"]
